[gd_scene load_steps=5 format=2]

[ext_resource path="res://waves/Waves.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/shipa.tscn" type="PackedScene" id=2]
[ext_resource path="res://hud/hud.tscn" type="PackedScene" id=3]
[ext_resource path="res://game.gd" type="Script" id=4]

[node name="Game" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ],
"_edit_vertical_guides_": [  ]
}

[node name="HUD" parent="." instance=ExtResource( 3 )]
visible = false
anchor_right = 0.0
margin_top = 796.0
margin_right = 600.0
margin_bottom = 1024.0

[node name="Waves" parent="." instance=ExtResource( 1 )]

[node name="ShipA" parent="." instance=ExtResource( 2 )]
position = Vector2( 300, 850 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 300, 850 )
[connection signal="spawn_mob" from="Waves" to="." method="_on_spawn_mob"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
